# cmake-tests-and-tooling-for-c-c--projects-2024-edition

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Makefile
cmake/: AddGitSubmodule.cmake  CPM.cmake  ConfigSafeGuards.cmake  Docs.cmake  Linters.cmake  Sanitizers.cmake  Style.cmake  Warnings.cmake
demos/1-hello-world/: CMakeLists.txt  main.cpp
demos/10-generators/: CMakeLists.txt
demos/11-clang-tidy/: CMakeLists.txt
demos/11-clang-tidy/src/: main.cpp
demos/12-clang-format/: CMakeLists.txt
demos/12-clang-format/src/: main.cpp
demos/13-code-coverage/: CMakeLists.txt
demos/13-code-coverage/src/bar/: bar.cpp  bar.h
demos/13-code-coverage/src/foo/: foo.cpp  foo.h
demos/13-code-coverage/tests/: test_bar.cpp  test_foo.cpp
demos/2-project-structure/: CMakeLists.txt
demos/2-project-structure/app/: CMakeLists.txt  main.cpp
demos/2-project-structure/my_lib/: CMakeLists.txt
demos/2-project-structure/my_lib/src/: my_lib.cpp
demos/2-project-structure/src/: my_lib.cpp
demos/3-variables-options/: CMakeLists.txt
demos/3-variables-options/app/src/: main.cpp
demos/4-config-files/: CMakeLists.txt
demos/4-config-files/app/src/: main.cpp
demos/4-config-files/my_lib/: CMakeLists.txt
demos/5-external/: CMakeLists.txt
demos/5-external-cpm/: CMakeLists.txt
demos/5-external-cpm/src/: main.cpp
demos/5-external-fetch/: CMakeLists.txt
demos/5-external-fetch/src/: main.cpp
demos/5-external-submodule/: CMakeLists.txt
demos/5-external-submodule/src/: main.cpp
demos/5-external/app/: CMakeLists.txt
demos/5-external/app/src/: main.cpp
demos/5-external/config/: CMakeLists.txt
demos/5-external/config/include/: config.h.in
demos/6-documentation/: CMakeLists.txt
demos/6-documentation/src/: main.cpp
demos/7-unit-testing/: CMakeLists.txt
demos/7-unit-testing/tests/: test_factorial.cpp
demos/8-warnings/: CMakeLists.txt
demos/8-warnings/src/: main.cpp
demos/9-sanitizers/: CMakeLists.txt
demos/9-sanitizers/src/: main.cpp
docs/: Doxyfile
